tests/grammar/snapshots/r#mod__grammar__alpha050__dollar_at_end.snap
---
source: tests/grammar/alpha050.rs
expression: "compiler.tokenize(\"text$\")"
---
[
    (
        Token(
            "text",
        ),
        0..4,
    ),
    (
        Token(
            "$",
        ),
        4..5,
    ),
]
