tests/grammar/snapshots/r#mod__grammar__alpha050__dollar_dollar_space.snap
---
source: tests/grammar/alpha050.rs
expression: "compiler.tokenize(\"$$ \")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
    (
        Token(
            "$",
        ),
        1..2,
    ),
]
