tests/grammar/snapshots/r#mod__grammar__alpha050__just_dollar.snap
---
source: tests/grammar/alpha050.rs
expression: "compiler.tokenize(\"$\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
]
