tests/grammar/snapshots/r#mod__grammar__alpha050__modifiers.snap
---
source: tests/grammar/alpha050.rs
expression: parse(&tokenize(input))
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Command(
                                    [
                                        (
                                            Sudo,
                                            5..9,
                                        ),
                                    ],
                                    [
                                        (
                                            Text(
                                                "$",
                                            ),
                                            10..11,
                                        ),
                                        (
                                            Text(
                                                "$",
                                            ),
                                            11..12,
                                        ),
                                    ],
                                    [],
                                ),
                                5..12,
                            ),
                        ),
                        5..12,
                    ),
                ),
                5..12,
            ),
            (
                Statement(
                    (
                        Expression(
                            (
                                Command(
                                    [
                                        (
                                            Trust,
                                            17..22,
                                        ),
                                    ],
                                    [
                                        (
                                            Text(
                                                "$",
                                            ),
                                            23..24,
                                        ),
                                        (
                                            Text(
                                                "$",
                                            ),
                                            24..25,
                                        ),
                                    ],
                                    [],
                                ),
                                17..25,
                            ),
                        ),
                        17..25,
                    ),
                ),
                17..25,
            ),
            (
                Statement(
                    (
                        Expression(
                            (
                                Command(
                                    [
                                        (
                                            Silent,
                                            30..36,
                                        ),
                                    ],
                                    [
                                        (
                                            Text(
                                                "$",
                                            ),
                                            37..38,
                                        ),
                                        (
                                            Text(
                                                "$",
                                            ),
                                            38..39,
                                        ),
                                    ],
                                    [],
                                ),
                                30..39,
                            ),
                        ),
                        30..39,
                    ),
                ),
                30..39,
            ),
            (
                Statement(
                    (
                        Expression(
                            (
                                Command(
                                    [
                                        (
                                            Unsafe,
                                            44..50,
                                        ),
                                    ],
                                    [
                                        (
                                            Text(
                                                "$",
                                            ),
                                            51..52,
                                        ),
                                        (
                                            Text(
                                                "$",
                                            ),
                                            52..53,
                                        ),
                                    ],
                                    [],
                                ),
                                44..53,
                            ),
                        ),
                        44..53,
                    ),
                ),
                44..53,
            ),
        ],
    ),
    [],
)
