tests/grammar/snapshots/r#mod__grammar__alpha050__numbers.snap
---
source: tests/grammar/alpha050.rs
expression: parse_unwrap(&tokenize(input))
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Int(
                            (
                                2,
                                5..6,
                            ),
                        ),
                        5..6,
                    ),
                ),
                5..6,
            ),
        ),
        5..6,
    ),
    (
        Statement(
            (
                Expression(
                    (
                        Number(
                            (
                                2.4,
                                11..14,
                            ),
                        ),
                        11..14,
                    ),
                ),
                11..14,
            ),
        ),
        11..14,
    ),
    (
        Statement(
            (
                Expression(
                    (
                        Number(
                            (
                                0.2,
                                19..21,
                            ),
                        ),
                        19..21,
                    ),
                ),
                19..21,
            ),
        ),
        19..21,
    ),
]
