tests/grammar/snapshots/r#mod__grammar__alpha050__single_char.snap
---
source: tests/grammar/alpha050.rs
expression: "compiler.tokenize(\"x\")"
---
[
    (
        Token(
            "x",
        ),
        0..1,
    ),
]
