tests/grammar/snapshots/r#mod__grammar__alpha050__string_trailing_backslash.snap
---
source: tests/grammar/alpha050.rs
expression: "compiler.tokenize(r#\"\"test\\\"\"#)"
---
[
    (
        Token(
            "\"",
        ),
        0..1,
    ),
    (
        Token(
            "test",
        ),
        1..5,
    ),
    (
        Token(
            "\\\"",
        ),
        5..7,
    ),
]
